[gd_scene load_steps=8 format=2]

[ext_resource path="res://ClockCal.gd" type="Script" id=1]
[ext_resource path="res://TimeLabalTheme.tres" type="Theme" id=2]
[ext_resource path="res://DateLabelTheme.tres" type="Theme" id=4]
[ext_resource path="res://CalendarTheme.tres" type="Theme" id=7]
[ext_resource path="res://NanumGothicBold.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
size = 80
use_mipmaps = true
font_data = ExtResource( 8 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="ClockCalScn" type="Node2D"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="TimeLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_top = -50.0
margin_right = 1920.0
margin_bottom = 410.0
theme = ExtResource( 2 )
text = "88:88:88"
align = 1

[node name="CalendarGrid" type="GridContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 960.0
margin_top = 350.0
margin_right = 1920.0
margin_bottom = 1080.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource( 7 )
columns = 7

[node name="DateLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_top = 352.0
margin_right = 960.0
margin_bottom = 502.0
theme = ExtResource( 4 )
text = "2022-10-91 Sat"

[node name="WeatherContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 485.0
margin_right = 960.0
margin_bottom = 1080.0
grow_vertical = 0
theme = SubResource( 2 )
alignment = 1

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
